<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fraghome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsManagerHome.HomeFragment">

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Gameweek_stats"
		android:textColor="@color/black"
		android:textSize="24sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ScoreView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
			android:background="@drawable/gameweek_game_layout_border">

			<ImageView
				android:id="@+id/imageView"
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:contentDescription="@string/home_team_stats"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.03"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/esake_logo"/>

			<TextView
				android:id="@+id/textView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/home_score_stats"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/imageView2"
				app:layout_constraintHorizontal_bias="0.1"
				app:layout_constraintStart_toEndOf="@+id/imageView"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/textView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/dash"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/textView3"
				app:layout_constraintStart_toEndOf="@+id/textView"
				app:layout_constraintTop_toTopOf="parent"/>

			<TextView
				android:id="@+id/textView3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/away_score_stats"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/imageView2"
				app:layout_constraintHorizontal_bias="0.9"
				app:layout_constraintStart_toEndOf="@+id/imageView"
				app:layout_constraintTop_toTopOf="parent"/>

			<ImageView
				android:id="@+id/imageView2"
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:contentDescription="@string/away_team_stats"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.45"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/esake_logo" />

			<Button
				android:id="@+id/watchGame"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minHeight="48dp"
				android:clickable="true"
				android:enabled="true"
				android:text="@string/action_stats"
				android:textColor="@color/white"
				android:textSize="11sp"
				app:backgroundTint="@color/primary_color"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias=".9"
				app:layout_constraintStart_toEndOf="@+id/imageView2"
				app:layout_constraintTop_toTopOf="parent"/>
		</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>