<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".Login">

	<ImageView
		android:id="@+id/esakeLogoLogInAdmin"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:contentDescription="@string/logo"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.04"
		app:srcCompat="@drawable/esake_logo" />

	<TextView
		android:id="@+id/text_LogIn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/loginPage"
		android:textColor="@color/primary_color"
		android:textSize="34sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/esakeLogoLogInAdmin"
		app:layout_constraintVertical_bias="0.07" />

	<EditText
		android:id="@+id/username"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:autofillHints="testHints"
		android:background="@drawable/signinup_buttons_border"
		android:drawableStart="@drawable/custom_username_icon"
		android:drawableLeft="@drawable/ic_baseline_username_24"
		android:drawablePadding="12dp"
		android:hint="@string/prompt_username"
		android:inputType="textPersonName"
		android:minHeight="48dp"
		android:paddingStart="12dp"
		android:paddingLeft="12dp"
		android:paddingEnd="12dp"
		android:selectAllOnFocus="true"
		android:textColorHint="@color/hints"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_LogIn"
		app:layout_constraintVertical_bias="0.1" />

	<EditText
		android:id="@+id/password"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:autofillHints="testHints"
		android:background="@drawable/signinup_buttons_border"
		android:drawableStart="@drawable/custom_password_icon"
		android:drawableLeft="@drawable/ic_baseline_password_24"
		android:drawablePadding="12dp"
		android:hint="@string/prompt_password"
		android:imeActionLabel="@string/action_sign_in_short"
		android:imeOptions="actionDone"
		android:inputType="textPassword"
		android:minHeight="48dp"
		android:paddingStart="12dp"
		android:paddingLeft="12dp"
		android:paddingEnd="12dp"
		android:selectAllOnFocus="true"
		android:textColorHint="@color/hints"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/username"
		app:layout_constraintVertical_bias="0.08" />

	<Button
		android:id="@+id/button_login"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:background="@drawable/rounded_button_for_login"
		android:enabled="true"
		android:text="@string/login"
		android:textAllCaps="false"
		android:textColor="@color/white"
		android:textSize="18sp"
		app:backgroundTint="@color/primary_color"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/password"
		app:layout_constraintVertical_bias="0.2"
		tools:ignore="DuplicateSpeakableTextCheck" />

	<TextView
		android:id="@+id/ContinueAsUser"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="35dp"
		android:text="@string/continue_as_user"
		android:textAllCaps="false"
		android:textColor="@color/continueAsUser"
		android:textSize="16sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button_login"
		app:layout_constraintVertical_bias="0.005" />

</androidx.constraintlayout.widget.ConstraintLayout>